# YANAT

./: .buildinfo  .gitignore  CITATION.cff  LICENSE  README.md  core.py  examples.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  yanat.html
.doctrees/: environment.pickle  examples.doctree  index.doctree  modules.doctree  yanat.doctree
.github/: documentation.yml
.github/workflows/: documentation.yml  python-publish.yml
_modules/: index.html
_modules/yanat/: core.html  generative_game_theoric.html  generative_game_theoric_numba.html  utils.html
_sources/: examples.rst.txt  index.rst.txt  modules.rst.txt  yanat.rst.txt
docs/: conf.py  index.rst
examples/: generative game theoric.ipynb  generative.ipynb  generative_game_theoric.ipynb  optimize_alpha_gradient.py
tests/: test_core.py  test_eigen_stability.py  test_generative.py  test_generative_game_theoric.py  test_generative_numba.py  test_generative_pytorch.py  test_nodal_optimization.py  test_numba_comparison.py  test_payoff_tolerance_2d.py  test_utils.py
yanat/: __init__.py  core.py  generative.py  generative_game_theoric.py  generative_game_theoric_numba.py  generative_game_theoric_pytorch.py  utils.py
