[project]
name = "yanat"
version = "0.0.10"
description = "Yet Another Network Analysis Toolbox"
authors = [
    {name = "Kayson Fakhar"},
    {name = "Shrey Dixit"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "msapy>=1.7.2",
    "numba>=0.61.2",
    "numpy>=2.3.1",
    "scipy>=1.16.0",
    "typeguard>=4.4.4",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "myst-parser>=4.0.1"
]

[project.optional-dependencies]
dev = [
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yanat"]
