[project]
name = "yanat"
version = "0.1.0"
description = "Yet Another Network Analysis Toolbox"
authors = [
    { name = "Kayson Fakhar, Shrey Dixit" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "msapy>=1.7",
    "numba>=0.59.0",
    "numpy>=1.26.4",
    "scipy>=1.12.0",
    "typeguard>=2.13",
    "requests>=2.29.0",
    "scikit-learn>=1.4.1",
    "myst-parser>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
