[project]
name = "yanat"
version = "0.1.1"
description = "Yet Another Network Analysis Toolbox"
authors = [
    { name = "Kayson Fakhar" },
    { name = "Shrey Dixit" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numba>=0.62.1",
    "numpy>=2.3.4",
    "scipy>=1.16.3",
    "typeguard>=2.13.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "myst-parser>=4.0.1",
]

[project.optional-dependencies]
optimal_influence = [
    "msapy>=1.7.3",
]
dev = [
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "pytest>=8.4.2",
]

examples = [
    "netneurotools>=0.1.0",
    "vizman>=0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
